@@ -89,7 +89,7 @@ function preparse_bbcode($text, &$errors, $is_signature = false)
 			$text = $temp_text;
 
 		// Remove empty tags
-		while ($new_text = preg_replace('/\[(b|u|i|h|colou?r|quote|code|img|url|email|list)(?:\=[^\]]*)?\]\[\/\1\]/', '', $text))
+		while ($new_text = preg_replace('/\[(del|b|u|i|h|colou?r|quote|code|img|url|email|list)(?:\=[^\]]*)?\]\[\/\1\]/', '', $text))
 		{
 			if ($new_text != $text)
 				$text = $new_text;
@@ -117,7 +117,7 @@ function preparse_tags($text, &$errors, $is_signature = false)
 	// Start off by making some arrays of bbcode tags and what we need to do with each one
 
 	// List of all the tags
-	$tags = array('quote', 'code', 'b', 'i', 'u', 'color', 'colour', 'url', 'email', 'img', 'list', '*', 'h');
+	$tags = array('quote', 'code', 'del', 'b', 'i', 'u', 'color', 'colour', 'url', 'email', 'img', 'list', '*', 'h');
 	// List of tags that we need to check are open (You could not put b,i,u in here then illegal nesting like [b][i][/b][/i] would be allowed)
 	$tags_opened = $tags;
 	// and tags we need to check are closed (the same as above, added it just in case)
@@ -129,21 +129,21 @@ function preparse_tags($text, &$errors, $is_signature = false)
 	// Block tags, block tags can only go within another block tag, they cannot be in a normal tag
 	$tags_block = array('quote', 'code', 'list', 'h', '*');
 	// Inline tags, we do not allow new lines in these
-	$tags_inline = array('b', 'i', 'u', 'color', 'colour', 'h');
+	$tags_inline = array('del', 'b', 'i', 'u', 'color', 'colour', 'h');
 	// Tags we trim interior space
 	$tags_trim = array('img');
 	// Tags we remove quotes from the argument
 	$tags_quotes = array('url', 'email', 'img');
 	// Tags we limit bbcode in
 	$tags_limit_bbcode = array(
-		'*'		=> array('b', 'i', 'u', 'color', 'colour', 'url', 'email', 'list', 'img'),
+		'*'		=> array('del', 'b', 'i', 'u', 'color', 'colour', 'url', 'email', 'list', 'img'),
 		'list'	=> array('*'),
-		'url'	=> array('b', 'i', 'u', 'color', 'colour', 'img'),
-		'email' => array('b', 'i', 'u', 'color', 'colour', 'img'),
+		'url'	=> array('del', 'b', 'i', 'u', 'color', 'colour', 'img'),
+		'email' => array('del', 'b', 'i', 'u', 'color', 'colour', 'img'),
 		'img'	=> array()
 	);
 	// Tags we can automatically fix bad nesting
-	$tags_fix = array('quote', 'b', 'i', 'u', 'color', 'colour', 'url', 'email', 'h');
+	$tags_fix = array('quote', 'del', 'b', 'i', 'u', 'color', 'colour', 'url', 'email', 'h');
 
 	$return = ($hook = get_hook('ps_preparse_tags_start')) ? eval($hook) : null;
 	if ($return !== null)
@@ -765,12 +765,14 @@ $text);
 		$replace_callback[] = 'handle_list_tag($matches[2], $matches[1])';
 	}
 
+	$pattern[] = '#\[del\](.*?)\[/del\]#ms';
 	$pattern[] = '#\[b\](.*?)\[/b\]#ms';
 	$pattern[] = '#\[i\](.*?)\[/i\]#ms';
 	$pattern[] = '#\[u\](.*?)\[/u\]#ms';
 	$pattern[] = '#\[colou?r=([a-zA-Z]{3,20}|\#[0-9a-fA-F]{6}|\#[0-9a-fA-F]{3})](.*?)\[/colou?r\]#ms';
 	$pattern[] = '#\[h\](.*?)\[/h\]#ms';
 
+	$replace[] = '<s>$matches[1]</s>';
 	$replace[] = '<strong>$matches[1]</strong>';
 	$replace[] = '<em>$matches[1]</em>';
 	$replace[] = '<span class=\"bbu\">$matches[1]</span>';
