@@ -1,3 +1,7 @@
+2017-11-18 18:00:00
+===================
+Added del tag for Strikethrough text
+
 2017-11-18 16:36:00
 ===================
 Synched to upstream master as of 2017-01-12
